--- a/client/src/App.css
+++ b/client/src/App.css
@@ -18,6 +18,20 @@
   font-size: large;
 }
 
+.Navbar {
+text-align: center;
+}
+
+.Navbar p {
+  display: inline-block;
+  padding: 5px;
+  border: right 1px solid black
+}
+
+.Navbar a {
+  color: blue
+}
+
 @keyframes App-logo-spin {
   from { transform: rotate(0deg); }
   to { transform: rotate(360deg); }
