--- a/client/src/App.css
+++ b/client/src/App.css
@@ -36,3 +36,7 @@ text-align: center;
   from { transform: rotate(0deg); }
   to { transform: rotate(360deg); }
 }
+
+.calendarContainer {
+  height: 500px;
+}
