--- a/client/src/App.css
+++ b/client/src/App.css
@@ -22,13 +22,25 @@
 
 .Navbar {
 text-align: center;
+background-color: #333;
+overflow: hidden
 }
 
-.Navbar p {
+.Navbar a {
   display: inline-block;
   padding: 5px;
   text-decoration: underline;
-  color: black
+  color: white;
+}
+
+.Navbar a:hover {
+  background-color: #ddd;
+  color: white
+}
+
+.Navbar a:active {
+  background-color: tan;
+  color: white
 }
 
 .LandingPageText {
