--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,7 +1,6 @@
 .App {
-  text-align: center;
   background-image:url('https://img0.etsystatic.com/220/1/11982046/il_570xN.1229125038_57y4.jpg');
-  border-radius: 0  100% 100% / 15%;
+  repeat: no-repeat;
 }
 
 .App-logo {
@@ -12,7 +11,6 @@
 .App-header {
   background-color: #222;
   height: 150px;
-  padding: 20px;
   color: white;
 }
 
@@ -20,37 +18,14 @@
   font-size: large;
 }
 
-.Navbar {
-text-align: center;
-background-color: #333;
-overflow: hidden
-}
-
-.Navbar a {
-  display: inline-block;
-  padding: 5px;
-  text-decoration: underline;
-  color: white;
-}
-
-.Navbar a:hover {
-  background-color: #ddd;
-  color: white
-}
-
-.Navbar a:active {
-  background-color: tan;
-  color: white
-}
-
 .LandingPageText {
   color: black;
   background-color: white;
   font-family: 'Muli', sans-serif;
+  text-align: center;
 }
 
 .box {
-  margin-top: 50px;
   height: 400px;
   width: 400px;
   border: 1px solid black;
@@ -68,22 +43,72 @@ overflow: hidden
   color: white;
   margin-bottom: 25px;
   border-radius: 5px;
+  font-weight: bold;
 }
 
 .loginContainer {
-padding-top: 50px;
+padding-top: 100px;
 padding-bottom: 50px;
 margin: 50px;
 text-align: center;
 font-family: 'Muli', sans-serif;
 border: 1px solid black;
 position: relative;
+background-repeat: no-repeat;
+background-image:url('http://182.72.79.154/p1078/wp-content/uploads/2016/07/barber-shop.jpg');
+background-size: 20%;
+height: 150px;
 }
 
 .loginContainer loginForm {
   margin: 0;
   position: absolute;
-  top: 50%
+  top: 50%;
+}
+
+.loginForm {
+  border: 1px solid black;
+  width: 400px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.loginForm button {
+  border-radius: 5px;
+  background-color: grey;
+  color: white;
+  margin-top: 5px;
+  width:75px;
+}
+
+.loginForm label {
+  font-weight : bold;
+}
+
+.registrationContainer {
+  text-align: center;
+  padding-top: 50px;
+  padding-bottom: 50px;
+  margin: 50px;
+}
+
+.registrationContainer form {
+  width: 400px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.registrationForm {
+  border: 1px solid black;
+  text-align: center;
+  padding-bottom: 10px;
+}
+
+.registrationForm button {
+  background-color: grey;
+  color: white;
+  font-weight: bold;
+  border-radius: 5px;
 }
 
 @keyframes App-logo-spin {
@@ -93,4 +118,17 @@ position: relative;
 
 .calendarContainer {
   height: 500px;
+}
+
+.wallpaper {
+  background-image: url('https://img0.etsystatic.com/220/1/11982046/il_570xN.1229125038_57y4.jpg');
+  background-repeat: no-repeat;
+  background-size: 100%;
+}
+
+.videoContainer {
+  margin-left: auto;
+  margin-right: auto;
+  width: 600px;
+  height: 600px;
 }
