--- a/client/src/Navbar.css
+++ b/client/src/Navbar.css
@@ -3,9 +3,6 @@ display: block;
 position: relative;
 text-align: center;
 background-color: #333;
-z-index: 1;
--webkit-user-select: none;
-user-select: none;
 height: 100px;
 color: white;
 padding-bottom: 10px;
@@ -27,7 +24,7 @@ padding-bottom: 10px;
      cursor: pointer;
 }
 
-.logoutButton{
+.logoutButton {
   margin-left: 1000px;
   margin-top: 25px;
   font-size: 15px;
@@ -43,7 +40,6 @@ padding-bottom: 10px;
   cursor: pointer;
   opacity: 0; /* hide this */
   z-index: 2; /* and place it over the hamburger */
--webkit-touch-callout: none;
 }
 
 .Navbar span {
@@ -65,7 +61,8 @@ padding-bottom: 10px;
 }
 
 .Navbar span:nth-last-child(2)
-{transform-origin: 0% 100%;
+{
+  transform-origin: 0% 100%;
 }
 
 .Navbar input:checked ~ span
@@ -81,7 +78,6 @@ padding-bottom: 10px;
   opacity: 0;
   transform: rotate(0deg)
   scale(0.2, 0.2);
-
 }
 
 .Navbar input:checked ~ span:nth-last-child(2)
@@ -95,15 +91,11 @@ padding-bottom: 10px;
   margin: -100px 0 0 -50px;
   padding: 50px;
   padding-top: 125px;
-
   background: #ededed;
   list-style-type: none;
   -webkit-font-smoothing: antialiased;
-  /* to stop flickering of text in safari */
-
   transform-origin: 0% 0%;
   transform: translate(-100%, 0);
-
   transition: transform 0.5s cubic-bezier(0.77,0.2,0.05,1.0);
 }
 
